fixes h1 line-height on mobile

--- a/style.css
+++ b/style.css
@@ -278,7 +278,6 @@ footer ul {
 
   h1 {
     font-size: 36px;
-    line-height: 1.25;
   }
 
   .profile {
